--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "tsconfig-paths": "^4.2.0"
   }
 }
