--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && cp -r src/views dist/views",
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
@@ -22,23 +22,24 @@
   },
   "homepage": "https://github.com/monajstha/DataAware-backend#readme",
   "devDependencies": {
+    "eslint": "^9.39.1",
+    "install": "^0.13.0",
+    "nodemon": "^3.1.10",
+    "npm": "^11.6.2",
+    "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "prisma": "^6.19.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "@prisma/client": "^6.19.0",
+    "cors": "^2.8.5",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
     "dotenv": "^17.2.3",
-    "eslint": "^9.39.1",
-    "express": "^5.1.0",
-    "install": "^0.13.0",
-    "nodemon": "^3.1.10",
-    "npm": "^11.6.2",
-    "prettier": "^3.6.2",
-    "prisma": "^6.19.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.19.0",
-    "cors": "^2.8.5",
-    "tsconfig-paths": "^4.2.0"
+    "express": "^5.1.0"
   }
 }
