--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "esnext",
+    "module": "esnext",
+    "target": "es2023",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "types": ["node", "express"],
     "typeRoots": ["./src/types", "./node_modules/@types"],
 
