fix: fix render deployment issue by adding .js extension on imports

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsc --project tsconfig.json",
     "start": "node dist/src/server.js",
     "dev": "nodemon --exec tsx src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
@@ -41,11 +41,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "module-alias": "^2.2.3",
     "prisma": "^7.0.0",
-    "tsc-alias": "^1.8.16",
-    "typescript": "^5.9.3",
-    "tsx": "^4.20.6",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
